@@ -1,3 +1,7 @@
+Bugfixes
+   * No mysql_close
+     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2010x11x22x033859
+
 3.2.12 Summary of Changes
 
 Bugfixes
